// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/presenters/ProfileButtonPresenter  1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
  padding: 0;
  margin: 0;
  border: 0;
  outline: 0;
  background: none;
  cursor: pointer;
}

.emotion-1 {
  background-color: #163b84;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

<button
  className="emotion-2"
  onClick={undefined}
  type="button"
>
  <span
    aria-label="Avatar for Wolfgang Pauli"
    className="emotion-1"
    role="img"
  >
    <span
      aria-hidden="true"
      className="emotion-0"
    >
      WP
    </span>
  </span>
</button>
`;

exports[`profile-flyout/presenters/ProfileButtonPresenter  2`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
  padding: 0;
  margin: 0;
  border: 0;
  outline: 0;
  background: none;
  cursor: pointer;
}

.emotion-2 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-3 {
  background-color: #5b5bc2;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-0 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<button
  className="emotion-4"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="Avatar for Richard Feynman"
    className="emotion-3"
    role="img"
  >
    <span
      className="emotion-1"
    >
      <img
        alt="Avatar image of Richard Feynman"
        className="emotion-0"
        onError={[Function]}
        src="richard_phillips_feynman.png"
      />
    </span>
    <span
      aria-hidden="true"
      className="emotion-2"
    >
      RF
    </span>
  </span>
</button>
`;
